[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/ForceDebug.gd" type="Script" id=2]
[ext_resource path="res://src/Rudder.gd" type="Script" id=3]
[ext_resource path="res://src/Boat.gd" type="Script" id=4]
[ext_resource path="res://src/Sail.gd" type="Script" id=5]
[ext_resource path="res://src/CameraPivot.gd" type="Script" id=6]
[ext_resource path="res://scenes/objects/Floater.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/boat.obj" type="ArrayMesh" id=9]
[ext_resource path="res://models/rudder.obj" type="ArrayMesh" id=10]
[ext_resource path="res://models/keel.obj" type="ArrayMesh" id=11]
[ext_resource path="res://models/mainsail.obj" type="ArrayMesh" id=12]
[ext_resource path="res://models/bom.obj" type="ArrayMesh" id=13]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0.853998, -0.74524, 0.217645, 0.853998, 0.085529, 0.217645, 0.788992, -0.74524, 0.016604, 0.788992, 0.085529, 0.016604, 0.788992, -0.74524, 0.016604, 0.788992, 0.085529, 0.016604, 0.603868, -0.74524, -0.209652, 0.603868, 0.085529, -0.209652, 0.603868, -0.74524, -0.209652, 0.603868, 0.085529, -0.209652, 0.326811, -0.745239, -0.360831, 0.326811, 0.085529, -0.360831, 0.326811, -0.745239, -0.360831, 0.326811, 0.085529, -0.360831, 0, -0.745239, -0.413918, 0, 0.085529, -0.413918, -0.788992, 0.085529, 0.016604, -0.853998, 0.085529, 0.217645, -0.788992, -0.74524, 0.016604, -0.853998, -0.74524, 0.217645, -0.603868, 0.085529, -0.209652, -0.788992, 0.085529, 0.016604, -0.603868, -0.74524, -0.209652, -0.788992, -0.74524, 0.016604, 0, 0.085529, -0.413918, -0.326811, 0.085529, -0.360831, 0, -0.745239, -0.413918, -0.326811, -0.745239, -0.360831, -0.326811, 0.085529, -0.360831, -0.603868, 0.085529, -0.209652, -0.326811, -0.745239, -0.360831, -0.603868, -0.74524, -0.209652, -0.509385, 0.082548, 0.189165, -0.705238, 0.082086, 0.189165, -0.468828, 0.96443, 0.189165, -0.642419, 0.985166, 0.189165, -0.515526, 1.96388, 0.045051, -0.728836, 1.00097, 0.016604, -0.394566, 1.96388, -0.149939, -0.557827, 1.00097, -0.209652, 0.788992, -0.74524, 0.016604, 0.603868, -0.74524, -0.209652, 0.667082, -1.7963, 0.048163, 0.510563, -1.7963, -0.131634, 0, 3.18884, -0.191048, 0, 3.21827, -0.083372, -0.042531, 3.12343, -0.191048, -0.078587, 3.12343, -0.083372, 0, 0.08541, 0.396955, -0.277426, 0.083094, 0.359857, 0, 0.908429, 0.396955, -0.271106, 0.940812, 0.359857, 0.853998, -0.74524, 0.217645, 0.788992, -0.74524, 0.016604, 0.722045, -1.7963, 0.194403, 0.667082, -1.7963, 0.048163, 0.603868, -0.74524, -0.209652, 0.326811, -0.745239, -0.360831, 0.510563, -1.7963, -0.131634, 0.276315, -1.7963, -0.251771, 0.603868, 0.085529, -0.209652, 0.788992, 0.085529, 0.016604, 0.557827, 1.00097, -0.209652, 0.728836, 1.00097, 0.016604, 0, 3.12343, -0.228858, 0, 3.18884, -0.191048, -0.042531, 3.12343, -0.191048, 0.788992, 0.085529, 0.016604, 0.853998, 0.085529, 0.217645, 0.728836, 1.00097, 0.016604, 0.788887, 1.00097, 0.217645, 0.326811, 0.085529, -0.360831, 0.603868, 0.085529, -0.209652, 0.301894, 1.00097, -0.360831, 0.557827, 1.00097, -0.209652, 0, 0.085529, -0.413918, 0.326811, 0.085529, -0.360831, 0, 1.00097, -0.413918, 0.301894, 1.00097, -0.360831, -0.672915, 0.983818, 0.243248, -0.788887, 1.00097, 0.217645, -0.444454, 1.92994, 0.228057, -0.558001, 1.96388, 0.209212, 0.301894, 1.00097, -0.360831, 0.557827, 1.00097, -0.209652, 0.213538, 1.96388, -0.280227, 0.394566, 1.96388, -0.149939, 0.728836, 1.00097, 0.016604, 0.788887, 1.00097, 0.217645, 0.515526, 1.96388, 0.045051, 0.558001, 1.96388, 0.209212, -0.078587, 3.12343, -0.083372, -0.394566, 1.96388, -0.149939, -0.042531, 3.12343, -0.191048, -0.213538, 1.96388, -0.280227, -0.301894, 1.00097, -0.360831, -0.326811, 0.085529, -0.360831, 0, 1.00097, -0.413918, 0, 0.085529, -0.413918, 0, 1.00097, -0.413918, 0.301894, 1.00097, -0.360831, 0, 1.96388, -0.348678, 0.213538, 1.96388, -0.280227, 0.557827, 1.00097, -0.209652, 0.728836, 1.00097, 0.016604, 0.394566, 1.96388, -0.149939, 0.515526, 1.96388, 0.045051, 0.213538, 1.96388, -0.280227, 0.394566, 1.96388, -0.149939, 0.042531, 3.12343, -0.191048, 0.078587, 3.12343, -0.083372, 0.515526, 1.96388, 0.045051, 0.558001, 1.96388, 0.209212, 0.102679, 3.12343, 0.077776, 0.111139, 3.12343, 0.202017, -0.213538, 1.96388, -0.280227, -0.301894, 1.00097, -0.360831, 0, 1.96388, -0.348678, 0, 1.00097, -0.413918, -0.667082, -1.7963, 0.048163, -0.788992, -0.74524, 0.016604, -0.722045, -1.7963, 0.194403, -0.853998, -0.74524, 0.217645, 0, 1.96388, -0.348678, 0.213538, 1.96388, -0.280227, 0, 3.12343, -0.228858, 0.042531, 3.12343, -0.191048, 0.394566, 1.96388, -0.149939, 0.515526, 1.96388, 0.045051, 0.078587, 3.12343, -0.083372, 0.102679, 3.12343, 0.077776, -0.102679, 3.12343, 0.077776, -0.515526, 1.96388, 0.045051, -0.078587, 3.12343, -0.083372, -0.394566, 1.96388, -0.149939, -0.722045, -1.7963, 0.194403, 0, -1.7963, 0.194403, -0.667082, -1.7963, 0.048163, -0.510563, -1.7963, -0.131634, -0.276315, -1.7963, -0.251771, 0, -1.7963, -0.293958, -0.728836, 1.00097, 0.016604, -0.788992, 0.085529, 0.016604, -0.557827, 1.00097, -0.209652, -0.603868, 0.085529, -0.209652, 0.102679, 3.12343, 0.077776, 0.111139, 3.12343, 0.202017, 0, 3.24443, 0.077776, 0, 3.24443, 0.202017, -0.788887, 1.00097, 0.217645, -0.853998, 0.085529, 0.217645, -0.728836, 1.00097, 0.016604, -0.788992, 0.085529, 0.016604, -0.319895, -0.738252, 0.359857, -0.277426, 0.083094, 0.359857, 0, 0.08541, 0.396955, 0.102679, 3.12343, 0.077776, 0, 3.24443, 0.077776, 0.078587, 3.12343, -0.083372, 0, 3.21827, -0.083372, 0.509385, 0.082548, 0.189165, 0.705238, 0.082086, 0.189165, 0.500942, -0.738252, 0.189165, 0.70605, -0.738252, 0.189165, 0.078587, 3.12343, -0.083372, 0, 3.21827, -0.083372, 0.042531, 3.12343, -0.191048, 0, 3.18884, -0.191048, 0.042531, 3.12343, -0.191048, 0, 3.18884, -0.191048, 0, 3.12343, -0.228858, 0, 0.908429, 0.396955, -0.271106, 0.940812, 0.359857, 0, 1.92126, 0.303672, -0.189363, 1.92129, 0.266573, 0.276315, -1.7963, -0.251771, 0.510563, -1.7963, -0.131634, 0.667082, -1.7963, 0.048163, 0.722045, -1.7963, 0.194403, 0.705238, 0.082086, 0.189165, 0.737349, 0.081562, 0.245518, 0.70605, -0.738252, 0.189165, 0.737694, -0.738307, 0.246364, -0.111139, 3.12343, 0.202017, -0.558001, 1.96388, 0.209212, -0.102679, 3.12343, 0.077776, -0.515526, 1.96388, 0.045051, -0.394566, 1.96388, -0.149939, -0.557827, 1.00097, -0.209652, -0.213538, 1.96388, -0.280227, -0.301894, 1.00097, -0.360831, -0.70605, -0.738252, 0.189165, -0.500942, -0.738252, 0.189165, -0.509385, 0.082548, 0.189165, -0.42053, 1.93205, 0.189165, -0.444454, 1.92994, 0.228057, 0, 3.0592, 0.189165, 0, 3.06214, 0.21003, 0.604586, -1.71212, 0.135182, 0.70605, -0.738252, 0.189165, 0.637026, -1.71434, 0.215695, 0.737694, -0.738307, 0.246364, 0.642419, 0.985166, 0.189165, 0.468828, 0.96443, 0.189165, 0.509385, 0.082548, 0.189165, 0.672915, 0.983818, 0.243248, 0.737349, 0.081562, 0.245518, 0.642419, 0.985166, 0.189165, 0.705238, 0.082086, 0.189165, -0.737694, -0.738307, 0.246364, -0.853998, -0.74524, 0.217645, -0.737349, 0.081562, 0.245518, -0.853998, 0.085529, 0.217645, -0.510563, -1.7963, -0.131634, -0.603868, -0.74524, -0.209652, -0.667082, -1.7963, 0.048163, -0.788992, -0.74524, 0.016604, 0, -1.71434, 0.215695, -0.637026, -1.71434, 0.215695, 0, -1.71212, 0.135182, -0.604586, -1.71212, 0.135182, 0.444454, 1.92994, 0.228057, 0.672915, 0.983818, 0.243248, 0.42053, 1.93205, 0.189165, 0.642419, 0.985166, 0.189165, -0.557827, 1.00097, -0.209652, -0.603868, 0.085529, -0.209652, -0.301894, 1.00097, -0.360831, -0.326811, 0.085529, -0.360831, 0, 3.24443, 0.202017, -0.111139, 3.12343, 0.202017, 0, 3.24443, 0.077776, -0.102679, 3.12343, 0.077776, 0.42053, 1.93205, 0.189165, 0.642419, 0.985166, 0.189165, 0.189363, 1.92129, 0.266573, 0.468828, 0.96443, 0.189165, 0, 3.06214, 0.21003, 0.444454, 1.92994, 0.228057, 0, 3.0592, 0.189165, 0.42053, 1.93205, 0.189165, 0.604586, -1.71212, 0.135182, -0.604586, -1.71212, 0.135182, 0.319895, -0.738252, 0.359857, -0.319895, -0.738252, 0.359857, 0, 3.21827, -0.083372, 0, 3.24443, 0.077776, -0.078587, 3.12343, -0.083372, -0.102679, 3.12343, 0.077776, -0.705238, 0.082086, 0.189165, -0.737349, 0.081562, 0.245518, -0.642419, 0.985166, 0.189165, -0.672915, 0.983818, 0.243248, 0, 3.0592, 0.189165, 0.42053, 1.93205, 0.189165, 0.189363, 1.92129, 0.266573, -0.444454, 1.92994, 0.228057, -0.558001, 1.96388, 0.209212, 0, 3.06214, 0.21003, -0.111139, 3.12343, 0.202017, -0.642419, 0.985166, 0.189165, -0.672915, 0.983818, 0.243248, -0.42053, 1.93205, 0.189165, -0.444454, 1.92994, 0.228057, -0.737694, -0.738307, 0.246364, -0.737349, 0.081562, 0.245518, -0.70605, -0.738252, 0.189165, -0.705238, 0.082086, 0.189165, -0.737694, -0.738307, 0.246364, -0.70605, -0.738252, 0.189165, -0.637026, -1.71434, 0.215695, -0.604586, -1.71212, 0.135182, -0.319895, -0.738252, 0.359857, 0, 0.08541, 0.396955, 0.319895, -0.738252, 0.359857, 0.853998, 0.085529, 0.217645, 0.853998, -0.74524, 0.217645, 0.737349, 0.081562, 0.245518, 0.737694, -0.738307, 0.246364, 0.722045, -1.7963, 0.194403, 0, -1.7963, 0.194403, 0.637026, -1.71434, 0.215695, 0, -1.71434, 0.215695, 0.853998, -0.74524, 0.217645, 0.722045, -1.7963, 0.194403, 0.737694, -0.738307, 0.246364, 0.637026, -1.71434, 0.215695, -0.737349, 0.081562, 0.245518, -0.853998, 0.085529, 0.217645, -0.672915, 0.983818, 0.243248, -0.788887, 1.00097, 0.217645, 0.788887, 1.00097, 0.217645, 0.853998, 0.085529, 0.217645, 0.672915, 0.983818, 0.243248, 0.737349, 0.081562, 0.245518, 0.558001, 1.96388, 0.209212, 0.788887, 1.00097, 0.217645, 0.444454, 1.92994, 0.228057, 0.672915, 0.983818, 0.243248, 0.111139, 3.12343, 0.202017, 0, 3.06214, 0.21003, 0, 3.24443, 0.202017, 0.111139, 3.12343, 0.202017, 0.558001, 1.96388, 0.209212, 0, 3.06214, 0.21003, 0.444454, 1.92994, 0.228057, -0.500942, -0.738252, 0.189165, -0.604586, -1.71212, 0.135182, -0.70605, -0.738252, 0.189165, -0.277426, 0.083094, 0.359857, -0.509385, 0.082548, 0.189165, -0.271106, 0.940812, 0.359857, -0.468828, 0.96443, 0.189165, 0, 1.92126, 0.303672, -0.189363, 1.92129, 0.266573, 0, 3.0592, 0.189165, -0.558001, 1.96388, 0.209212, -0.788887, 1.00097, 0.217645, -0.515526, 1.96388, 0.045051, -0.728836, 1.00097, 0.016604, -0.189363, 1.92129, 0.266573, -0.42053, 1.93205, 0.189165, 0, 3.0592, 0.189165, -0.042531, 3.12343, -0.191048, -0.213538, 1.96388, -0.280227, 0, 3.12343, -0.228858, 0, 1.96388, -0.348678, -0.271106, 0.940812, 0.359857, -0.468828, 0.96443, 0.189165, -0.189363, 1.92129, 0.266573, 0.276315, -1.7963, -0.251771, 0.326811, -0.745239, -0.360831, 0, -1.7963, -0.293958, 0, -0.745239, -0.413918, 0.604586, -1.71212, 0.135182, 0.637026, -1.71434, 0.215695, 0, 0.08541, 0.396955, 0.277426, 0.083094, 0.359857, 0.319895, -0.738252, 0.359857, -0.637026, -1.71434, 0.215695, -0.722045, -1.7963, 0.194403, -0.737694, -0.738307, 0.246364, -0.853998, -0.74524, 0.217645, -0.276315, -1.7963, -0.251771, -0.326811, -0.745239, -0.360831, -0.510563, -1.7963, -0.131634, -0.603868, -0.74524, -0.209652, 0.189363, 1.92129, 0.266573, 0.271106, 0.940812, 0.359857, 0, 1.92126, 0.303672, 0, 0.908429, 0.396955, 0.271106, 0.940812, 0.359857, 0.277426, 0.083094, 0.359857, 0, 0.908429, 0.396955, 0, 0.08541, 0.396955, 0, 3.0592, 0.189165, 0.189363, 1.92129, 0.266573, 0, 1.92126, 0.303672, -0.637026, -1.71434, 0.215695, -0.722045, -1.7963, 0.194403, -0.604586, -1.71212, 0.135182, -0.500942, -0.738252, 0.189165, -0.319895, -0.738252, 0.359857, 0.319895, -0.738252, 0.359857, 0.500942, -0.738252, 0.189165, 0.604586, -1.71212, 0.135182, 0.509385, 0.082548, 0.189165, 0.500942, -0.738252, 0.189165, 0.277426, 0.083094, 0.359857, 0.319895, -0.738252, 0.359857, 0.189363, 1.92129, 0.266573, 0.468828, 0.96443, 0.189165, 0.271106, 0.940812, 0.359857, 0.468828, 0.96443, 0.189165, 0.509385, 0.082548, 0.189165, 0.271106, 0.940812, 0.359857, 0.277426, 0.083094, 0.359857, 0, 3.24443, 0.202017, 0, 3.06214, 0.21003, -0.111139, 3.12343, 0.202017, 0, -0.745239, -0.413918, -0.326811, -0.745239, -0.360831, 0, -1.7963, -0.293958, -0.276315, -1.7963, -0.251771, 0.70605, -0.738252, 0.189165, 0.604586, -1.71212, 0.135182, 0.500942, -0.738252, 0.189165, -0.319895, -0.738252, 0.359857, -0.500942, -0.738252, 0.189165, -0.277426, 0.083094, 0.359857, -0.509385, 0.082548, 0.189165, -0.468828, 0.96443, 0.189165, -0.642419, 0.985166, 0.189165, -0.189363, 1.92129, 0.266573, -0.42053, 1.93205, 0.189165 )

[sub_resource type="SpatialMaterial" id=2]
flags_use_point_size = true
vertex_color_use_as_albedo = true

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.0238163, 0.42417, 0.0740858 )

[sub_resource type="SpatialMaterial" id=4]
flags_use_point_size = true
vertex_color_use_as_albedo = true

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.0444001, 0.0674007, 0.242577 )

[sub_resource type="SpatialMaterial" id=6]
flags_use_point_size = true
vertex_color_use_as_albedo = true

[node name="Utka" type="Spatial"]

[node name="Boat" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.103551, 0.238437 )
angular_damp = 1.1
script = ExtResource( 4 )
keel_force = 120.0

[node name="FloaterBow" parent="Boat" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183585, -2 )
depthBeforeSubmerged = 0.8
impulseMultipier = 80.0

[node name="FloaterMast" parent="Boat" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.21302, -0.776187 )
depthBeforeSubmerged = 0.8
impulseMultipier = 20.0

[node name="FloaterStern" parent="Boat" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183585, 2 )
depthBeforeSubmerged = 0.8
impulseMultipier = 80.0

[node name="FloaterPort" parent="Boat" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.183585, 0 )
depthBeforeSubmerged = 0.8
impulseMultipier = 80.0

[node name="FloaterStar" parent="Boat" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.183585, 0 )
depthBeforeSubmerged = 0.8
impulseMultipier = 80.0

[node name="KeelForceOffset" type="Position3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.90473, 0 )

[node name="boat" type="MeshInstance" parent="Boat"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.463968, 0 )
mesh = ExtResource( 9 )

[node name="keel" type="MeshInstance" parent="Boat"]
transform = Transform( 0.76706, 0, 0, 0, 0.256025, 0.723072, 0, -0.723072, 0.256025, 0, -0.013, -0.509 )
mesh = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Boat"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.463968, 0 )
shape = SubResource( 1 )

[node name="CameraPivot" type="Position3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.463968, 0 )
script = ExtResource( 6 )

[node name="Camera" type="Camera" parent="Boat/CameraPivot"]
transform = Transform( 1, 0.000158428, -4.20959e-05, -0.000128787, 0.918173, 0.396179, 0.000101417, -0.396179, 0.918173, 0, 5.54926, 6.51758 )

[node name="Mast" type="CSGBox" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5312, -0.779 )
width = 0.0921735
height = 5.30645
depth = 0.102501

[node name="ForceDebug" type="ImmediateGeometry" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18867, 0 )
material_override = SubResource( 2 )
script = ExtResource( 2 )

[node name="Rudder" type="RigidBody" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.676556, 1.82306 )
script = ExtResource( 3 )

[node name="ForceOffset" type="Position3D" parent="Boat/Rudder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.620049, 0.182308 )
visible = false

[node name="Rudder" type="MeshInstance" parent="Boat/Rudder"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
mesh = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Boat/Rudder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.472123, 0.227822 )
shape = SubResource( 3 )

[node name="ForceDebug" type="ImmediateGeometry" parent="Boat/Rudder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36396, 0.185031 )
material_override = SubResource( 4 )
script = ExtResource( 2 )

[node name="HingeJoint" type="HingeJoint" parent="."]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, 0, 6.01775, -0.541637 )
nodes/node_a = NodePath("../Boat")
nodes/node_b = NodePath("../Bom")
collision/exclude_nodes = false
angular_limit/enable = true
angular_limit/upper = 20.1
angular_limit/lower = -20.5

[node name="HingeJoint2" type="HingeJoint" parent="."]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, 0, 1.34015, -0.541637 )
nodes/node_a = NodePath("../Boat")
nodes/node_b = NodePath("../Bom")
collision/exclude_nodes = false
angular_limit/enable = true
angular_limit/upper = 20.1
angular_limit/lower = -20.5

[node name="Bom" type="RigidBody" parent="."]
transform = Transform( -0.998, 0, -8.74228e-08, 0, 1, 0, 8.72479e-08, 0, -1, 0, 1.18116, -0.441334 )
mass = 0.1
script = ExtResource( 5 )

[node name="Bom" type="MeshInstance" parent="Bom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 7.10543e-15, 0, 1, 0, 0, 0 )
mesh = ExtResource( 13 )

[node name="mainsail" type="MeshInstance" parent="Bom"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 2.84217e-14, 0, 1, 0, 0, 0 )
mesh = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Bom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 5.68434e-14, 0, 1, 1.05553e-07, 0, -1.20498 )
shape = SubResource( 5 )

[node name="ForceOffset" type="Position3D" parent="Bom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.20792e-13, 0, 1, 5.0488e-08, 1.20623, -1.25636 )

[node name="ForceDebug" type="ImmediateGeometry" parent="Bom"]
transform = Transform( -1.002, 0, 8.7598e-08, 0, 1, 0, -8.74227e-08, 0, -1, 5.71679e-08, 1.66619, -0.652616 )
material_override = SubResource( 6 )
script = ExtResource( 2 )
